<resources>
    <string name="app_name">장보고배송기사</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC3SrcUtXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    </string>

    <string name="step_of">Step %1$d of %2$d</string>
    <string name="section_format">Section : %1$d</string>

    <string name="about_text">The best android implementation of material UI components. This app implemented based on Google Design Guidelines.
    </string>

    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="webview_loading">Load Content... </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="isAm">오전</string>

    <string name="ad_key">ca-app-pub-8469821633830665~1801891437</string>
    <string name="ad_banner_key">ca-app-pub-8469821633830665/5562200717</string>
    <string name="comment">댓글</string>
    <string name="kakao_app_key">a5dccf00f68ba1e5db6033621089e81a</string>
    <string name="profile">Profile</string>
    <string name="like">좋아요</string>
    <string name="setting_title">설정</string>
    <string name="setting_account">계정</string>
    <string name="setting_alarm">알림</string>
    <string name="title_activity_account">Account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="setting_save">저장</string>
    <string name="setting_like">좋아요</string>


</resources>
