<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:background="@color/grey_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/setting_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/grey_900" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_middle"
                    android:paddingTop="@dimen/spacing_middle">

                    <LinearLayout
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_900"
                            app:srcCompat="@drawable/ic_person"
                            tools:ignore="VectorDrawableCompat" />

                        <View
                            android:layout_width="@dimen/spacing_small"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/setting_account"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_80" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_arrow_right"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/red_400"
                            app:srcCompat="@drawable/ic_mail"
                            tools:ignore="VectorDrawableCompat" />

                        <View
                            android:layout_width="@dimen/spacing_small"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="문의"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/green_500"
                            app:srcCompat="@drawable/ic_notifications"
                            tools:ignore="VectorDrawableCompat" />

                        <View
                            android:layout_width="@dimen/spacing_small"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/setting_alarm"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90" />
                        <View
                            android:layout_width="@dimen/spacing_small"
                            android:layout_height="wrap_content" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            app:thumbTint="@color/switch_color_primary" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/logout_lyt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_person_outline"
                            tools:ignore="VectorDrawableCompat" />

                        <View
                            android:layout_width="@dimen/spacing_small"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="로그아웃"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/setting_save"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/grey_900" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_middle"
                    android:paddingTop="@dimen/spacing_middle">

                    <LinearLayout
                        android:id="@+id/like_lyt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/amber_900"
                            app:srcCompat="@drawable/ic_favorites"
                            tools:ignore="VectorDrawableCompat" />

                        <View
                            android:layout_width="@dimen/spacing_small"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/setting_like"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_80" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_arrow_right"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>

